--- a/README.rdoc
+++ b/README.rdoc
@@ -1,15 +1,15 @@
 = Discas::RentalHistory
 
-Discas::RentalHistoryは、ローカルに保存した、DVDレンタルサービスのDISCASのレンタル履歴ページから履歴データを抽出するツールです。DISCASのサイトに自動アクセスして履歴データを取得することは、このツールではできません。
+*Discas::RentalHistory*は、ローカルに保存した、DVDレンタルサービスのDISCASのレンタル履歴ページから履歴データを抽出するツールです。DISCASのサイトに自動アクセスして履歴データを取得することは、このツールではできません。;(
 
 = 使い方
 
 以下の手順を行います。
 
-+ DISCASのサイトにログインし、その履歴ページをローカルの任意のディレクトリに保存します。履歴ページが複数になるときはすべてのページを同じディレクトリに保存します。保存の際のファイル名はデフォルトのrentalLog.do.htmlのままで問題ありません。(変更する場合は、最初のファイルを番号なし、2番目以降は拡張子の前にその連続番号を振ります。例: rent.html, rent2.html, rent3.html.. )
+1. DISCASのサイトにログインし、その履歴ページをローカルの任意のディレクトリに保存します。履歴ページが複数になるときはすべてのページを同じディレクトリに保存します。保存の際のファイル名はデフォルトのrentalLog.do.htmlのままで問題ありません。(変更する場合は、最初のファイルを番号なし、2番目以降は拡張子の前にその連続番号を振ります。例: rent.html, rent2.html, rent3.html.. )
 
 
-+ 以下を実行します。
+2. 以下を実行します。
      require 'discas'
 
      discas = Discas::RentalHistory.new('/path/to/the/rentalLog.do.html')
